// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Header Page header displays both slots and props content 1`] = `
<v-card-stub loaderheight="4" tag="div" color="red" height="72" tile="true" flat="true" class="page-header--wrap d-flex justify-space-between align-center px-8 py-5">
  <div>
    <div class="d-flex">
      <icon-stub type="mdi-plus" size="20" color="black-darken4" variant="base" fillopacity="1" class="pr-1"></icon-stub>
      <div data-e2e="card-title" class="text-h2">
        Welcome back, User
      </div>
    </div>
    <div class="mt-2">
      <div>Description</div>
    </div>
    <div>Left slot</div>
  </div>
  <div class="page-header--right">
    <div>Right slot</div>
  </div>
</v-card-stub>
`;

exports[`Page Header Page header displays props content 1`] = `
<v-card-stub loaderheight="4" tag="div" color="red" height="72" tile="true" flat="true" class="page-header--wrap d-flex justify-space-between align-center px-8 py-5">
  <div>
    <div class="d-flex">
      <icon-stub type="mdi-plus" size="20" color="black-darken4" variant="base" fillopacity="1" class="pr-1"></icon-stub>
      <div data-e2e="card-title" class="text-h2">
        Welcome back, User
      </div>
    </div>
    <!---->
  </div>
  <div class="page-header--right"></div>
</v-card-stub>
`;

exports[`Page Header Page header displays slots content 1`] = `
<v-card-stub loaderheight="4" tag="div" color="white" height="72" tile="true" flat="true" class="page-header--wrap d-flex justify-space-between align-center px-8 py-5">
  <div>
    <div class="d-flex">
      <!---->
      <div data-e2e="card-title" class="text-h2">

      </div>
    </div>
    <div class="mt-2">
      <div>Description</div>
    </div>
    <div>Left slot</div>
  </div>
  <div class="page-header--right">
    <div>Right slot</div>
  </div>
</v-card-stub>
`;
